feat: adiciona service e controller exportacao do relatorio da busca de documentos